--- a/src/lib/styles/variables.css
+++ b/src/lib/styles/variables.css
@@ -1,4 +1,7 @@
-:where(html) {
+:root {
+	/* the selector does nothing, it's defined in postcss config */
+	/* media-queries don't work here, this file is just for variables that get added if used */
+
 	/* colors */
 	--brand-light: var(--pink-1);
 	--brand-dark: var(--pink-9);
@@ -16,10 +19,4 @@
 
 	/* z-index */
 	--layer-skip-link: 50;
-
-	@media (--OSdark) {
-		--brand: var(--brand-dark);
-		--text-1: var(--text-1-dark);
-		--bg-1: var(--bg-1-dark);
-	}
 }
