--- a/src/lib/styles/base/index.css
+++ b/src/lib/styles/base/index.css
@@ -20,11 +20,11 @@
 }
 
 :root {
-	@media (--OSdark) {
-		--brand: var(--pink-9);
-		--text-1: var(--gray-1);
-		--bg-1: var(--gray-9);
-		--border-color-1: var(--gray-7);
+	@media (--OSlight) {
+		--brand: var(--pink-1);
+		--text-1: var(--gray-9);
+		--bg-1: var(--gray-1);
+		--border-color-1: var(--gray-3);
 	}
 
 	@media (--motionNotOK) {
@@ -33,7 +33,7 @@
 }
 
 html {
-	color-scheme: light dark;
+	color-scheme: dark light;
 	text-rendering: optimizeLegibility;
 	min-height: 100dvh;
 }
