--- a/src/lib/styles/variables.css
+++ b/src/lib/styles/variables.css
@@ -3,10 +3,18 @@
 	/* media-queries don't work here, this file is just for variables that get added if used */
 
 	/* colors */
-	--brand: var(--pink-1);
-	--text-1: var(--gray-9);
-	--bg-1: var(--gray-1);
-	--border-color-1: var(--gray-3);
+	--primary: var(--blue-1);
+	--secondary: var(--green-1);
+	--tertiary: var(--yellow-1);
+	--success: var(--green-1);
+	--warning: var(--yellow-1);
+	--danger: var(--red-1);
+	--info: var(--blue-1);
+	--disabled: var(--gray-3);
+	--brand: var(--pink-9);
+	--text-1: var(--gray-1);
+	--bg-1: var(--gray-9);
+	--border-color-1: var(--gray-7);
 
 	/* animation */
 	--time-default: 0.2s;
