--- a/src/lib/styles/base/typography.css
+++ b/src/lib/styles/base/typography.css
@@ -1,9 +1,12 @@
 html {
-	color: var(--text-1);
 
-	@media (--useDataNotOK) {
-		font-family: system-ui;
-	}
+}
+
+body {
+	font-family: var(--font-family);
+	color: var(--text-1);
+	font-size: var(--size-3);
+	line-height: var(--line-height-3);
 }
 
 h1,
